--- a/2. linux based production grade hosting.md
+++ b/2. linux based production grade hosting.md
@@ -265,4 +265,71 @@ LAN users can access it via `http://192.168.121.220:8080`.
 ---
 ---
 
+vagrant@ubuntu2204:~/go-todo-v1$ docker logs -f nginx
+/docker-entrypoint.sh: /docker-entrypoint.d/ is not empty, will attempt to perform configuration
+/docker-entrypoint.sh: Looking for shell scripts in /docker-entrypoint.d/
+/docker-entrypoint.sh: Launching /docker-entrypoint.d/10-listen-on-ipv6-by-default.sh
+10-listen-on-ipv6-by-default.sh: info: can not modify /etc/nginx/conf.d/default.conf (read-only file system?)
+/docker-entrypoint.sh: Sourcing /docker-entrypoint.d/15-local-resolvers.envsh
+/docker-entrypoint.sh: Launching /docker-entrypoint.d/20-envsubst-on-templates.sh
+/docker-entrypoint.sh: Launching /docker-entrypoint.d/30-tune-worker-processes.sh
+/docker-entrypoint.sh: Configuration complete; ready for start up
+2025/10/02 17:17:08 [notice] 1#1: using the "epoll" event method
+2025/10/02 17:17:08 [notice] 1#1: nginx/1.29.1
+2025/10/02 17:17:08 [notice] 1#1: built by gcc 14.2.0 (Alpine 14.2.0) 
+2025/10/02 17:17:08 [notice] 1#1: OS: Linux 5.15.0-91-generic
+2025/10/02 17:17:08 [notice] 1#1: getrlimit(RLIMIT_NOFILE): 1048576:1048576
+2025/10/02 17:17:08 [notice] 1#1: start worker processes
+2025/10/02 17:17:08 [notice] 1#1: start worker process 21
+2025/10/02 17:17:08 [notice] 1#1: start worker process 22
+192.168.121.1 - - [02/Oct/2025:17:17:56 +0000] "GET / HTTP/1.1" 200 316 "-" "Mozilla/5.0 (X11; Linux x86_64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/141.0.0.0 Safari/537.36" "-"
+2025/10/02 17:17:56 [warn] 22#22: *1 an upstream response is buffered to a temporary file /var/cache/nginx/proxy_temp/1/00/0000000001 while reading upstream, client: 192.168.121.1, server: _, request: "GET /assets/index-XKjbZBS0.js HTTP/1.1", upstream: "http://172.18.0.3:80/assets/index-XKjbZBS0.js", host: "192.168.121.220:8080", referrer: "http://192.168.121.220:8080/"
+192.168.121.1 - - [02/Oct/2025:17:17:56 +0000] "GET /assets/index-XKjbZBS0.js HTTP/1.1" 200 180630 "http://192.168.121.220:8080/" "Mozilla/5.0 (X11; Linux x86_64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/141.0.0.0 Safari/537.36" "-"
+192.168.121.1 - - [02/Oct/2025:17:17:56 +0000] "GET /favicon.ico HTTP/1.1" 200 316 "http://192.168.121.220:8080/" "Mozilla/5.0 (X11; Linux x86_64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/141.0.0.0 Safari/537.36" "-"
+192.168.121.1 - - [02/Oct/2025:17:47:38 +0000] "GET / HTTP/1.1" 304 0 "-" "Mozilla/5.0 (X11; Linux x86_64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/141.0.0.0 Safari/537.36" "-"
+192.168.121.1 - - [02/Oct/2025:17:47:38 +0000] "GET /assets/index-XKjbZBS0.js HTTP/1.1" 304 0 "http://192.168.121.220:8080/" "Mozilla/5.0 (X11; Linux x86_64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/141.0.0.0 Safari/537.36" "-"
+192.168.121.1 - - [02/Oct/2025:17:47:38 +0000] "GET /favicon.ico HTTP/1.1" 304 0 "http://192.168.121.220:8080/" "Mozilla/5.0 (X11; Linux x86_64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/141.0.0.0 Safari/537.36" "-"
+192.168.121.1 - - [02/Oct/2025:17:49:00 +0000] "GET / HTTP/1.1" 304 0 "-" "Mozilla/5.0 (X11; Linux x86_64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/141.0.0.0 Safari/537.36" "-"
+192.168.121.1 - - [02/Oct/2025:17:50:49 +0000] "GET / HTTP/1.1" 304 0 "-" "Mozilla/5.0 (X11; Linux x86_64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/141.0.0.0 Safari/537.36" "-"
+192.168.121.1 - - [02/Oct/2025:19:48:09 +0000] "GET /favicon.ico HTTP/1.1" 304 0 "http://192.168.121.220:8080/" "Mozilla/5.0 (X11; Linux x86_64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/141.0.0.0 Safari/537.36" "-"
+192.168.121.1 - - [02/Oct/2025:19:48:13 +0000] "GET / HTTP/1.1" 200 316 "-" "Mozilla/5.0 (X11; Linux x86_64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/141.0.0.0 Safari/537.36" "-"
+192.168.121.1 - - [02/Oct/2025:19:48:13 +0000] "GET /assets/index-XKjbZBS0.js HTTP/1.1" 304 0 "http://192.168.121.220:8080/" "Mozilla/5.0 (X11; Linux x86_64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/141.0.0.0 Safari/537.36" "-"
+
+---
+---
+
+vagrant@ubuntu2204:~$ docker logs -f frontend
+/docker-entrypoint.sh: /docker-entrypoint.d/ is not empty, will attempt to perform configuration
+/docker-entrypoint.sh: Looking for shell scripts in /docker-entrypoint.d/
+/docker-entrypoint.sh: Launching /docker-entrypoint.d/10-listen-on-ipv6-by-default.sh
+10-listen-on-ipv6-by-default.sh: info: Getting the checksum of /etc/nginx/conf.d/default.conf
+10-listen-on-ipv6-by-default.sh: info: /etc/nginx/conf.d/default.conf differs from the packaged version
+/docker-entrypoint.sh: Sourcing /docker-entrypoint.d/15-local-resolvers.envsh
+/docker-entrypoint.sh: Launching /docker-entrypoint.d/20-envsubst-on-templates.sh
+/docker-entrypoint.sh: Launching /docker-entrypoint.d/30-tune-worker-processes.sh
+/docker-entrypoint.sh: Configuration complete; ready for start up
+2025/10/02 17:17:07 [notice] 1#1: using the "epoll" event method
+2025/10/02 17:17:07 [notice] 1#1: nginx/1.29.1
+2025/10/02 17:17:07 [notice] 1#1: built by gcc 14.2.0 (Alpine 14.2.0) 
+2025/10/02 17:17:07 [notice] 1#1: OS: Linux 5.15.0-91-generic
+2025/10/02 17:17:07 [notice] 1#1: getrlimit(RLIMIT_NOFILE): 1048576:1048576
+2025/10/02 17:17:07 [notice] 1#1: start worker processes
+2025/10/02 17:17:07 [notice] 1#1: start worker process 28
+2025/10/02 17:17:07 [notice] 1#1: start worker process 29
+172.18.0.5 - - [02/Oct/2025:17:17:56 +0000] "GET / HTTP/1.0" 200 316 "-" "Mozilla/5.0 (X11; Linux x86_64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/141.0.0.0 Safari/537.36" "-"
+172.18.0.5 - - [02/Oct/2025:17:17:56 +0000] "GET /assets/index-XKjbZBS0.js HTTP/1.0" 200 180630 "http://192.168.121.220:8080/" "Mozilla/5.0 (X11; Linux x86_64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/141.0.0.0 Safari/537.36" "-"
+172.18.0.5 - - [02/Oct/2025:17:17:56 +0000] "GET /favicon.ico HTTP/1.0" 200 316 "http://192.168.121.220:8080/" "Mozilla/5.0 (X11; Linux x86_64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/141.0.0.0 Safari/537.36" "-"
+172.18.0.5 - - [02/Oct/2025:17:47:38 +0000] "GET / HTTP/1.0" 304 0 "-" "Mozilla/5.0 (X11; Linux x86_64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/141.0.0.0 Safari/537.36" "-"
+172.18.0.5 - - [02/Oct/2025:17:47:38 +0000] "GET /assets/index-XKjbZBS0.js HTTP/1.0" 304 0 "http://192.168.121.220:8080/" "Mozilla/5.0 (X11; Linux x86_64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/141.0.0.0 Safari/537.36" "-"
+172.18.0.5 - - [02/Oct/2025:17:47:38 +0000] "GET /favicon.ico HTTP/1.0" 304 0 "http://192.168.121.220:8080/" "Mozilla/5.0 (X11; Linux x86_64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/141.0.0.0 Safari/537.36" "-"
+172.18.0.5 - - [02/Oct/2025:17:49:00 +0000] "GET / HTTP/1.0" 304 0 "-" "Mozilla/5.0 (X11; Linux x86_64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/141.0.0.0 Safari/537.36" "-"
+172.18.0.5 - - [02/Oct/2025:17:50:49 +0000] "GET / HTTP/1.0" 304 0 "-" "Mozilla/5.0 (X11; Linux x86_64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/141.0.0.0 Safari/537.36" "-"
+172.18.0.5 - - [02/Oct/2025:19:48:09 +0000] "GET /favicon.ico HTTP/1.0" 304 0 "http://192.168.121.220:8080/" "Mozilla/5.0 (X11; Linux x86_64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/141.0.0.0 Safari/537.36" "-"
+172.18.0.5 - - [02/Oct/2025:19:48:13 +0000] "GET / HTTP/1.0" 200 316 "-" "Mozilla/5.0 (X11; Linux x86_64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/141.0.0.0 Safari/537.36" "-"
+172.18.0.5 - - [02/Oct/2025:19:48:13 +0000] "GET /assets/index-XKjbZBS0.js HTTP/1.0" 304 0 "http://192.168.121.220:8080/" "Mozilla/5.0 (X11; Linux x86_64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/141.0.0.0 Safari/537.36" "-"
+
+
+
+
+
 
