Descriptive message about the changes

--- a/5. vagrant .box export.md
+++ b/5. vagrant .box export.md
@@ -138,6 +138,4 @@ docker-compose down
 
 ---
 
-আমি চাইলে এই documentation **Markdown format** বানিয়ে দিতে পারি যাতে GitHub/Docs site-এ paste করলে full professional layout থাকবে এবং screenshot add করা যায়।
-
-চাইছো আমি সেটা বানাই?
+docker-compose down => docker halt => vagrant package --output go-todo-vm.box
