--- a/3. docker compose based production grade hosting.md
+++ b/3. docker compose based production grade hosting.md
@@ -224,7 +224,12 @@ Open in browser (host machine, not VM):
 http://192.168.121.220:8080
 ```
 
-🎯 Use this IP for your screenshots.
+🎯 screenshots :
+
+![alt text](<Screenshot from 2025-10-03 02-12-46.png>)
+![alt text](<Screenshot from 2025-10-03 02-15-38.png>)
+![alt text](<Screenshot from 2025-10-03 02-15-57.png>)
+![alt text](<Screenshot from 2025-10-02 23-46-53.png>)
 
 ---
 
