--- a/4. K8s with gitops based production grade hosting.md
+++ b/4. K8s with gitops based production grade hosting.md
@@ -165,3 +165,11 @@ https://<EC2-Public-IP>:8443
 * [Kind Quick Start](https://kind.sigs.k8s.io/docs/user/quick-start/)
 * [Argo CD Documentation](https://argo-cd.readthedocs.io/en/stable/)
 * [AWS EC2 Documentation](https://docs.aws.amazon.com/ec2/index.html)
+
+🎯 `screenshots` :
+
+![alt text](<Screenshot from 2025-10-05 17-04-16.png>) 
+![alt text](<Screenshot from 2025-10-05 17-07-14.png>) 
+![alt text](<Screenshot from 2025-10-05 17-07-36.png>) 
+![alt text](<Screenshot from 2025-10-05 17-08-07.png>) 
+![alt text](<Screenshot from 2025-10-05 17-08-34.png>)
