--- a/6.production grade hosting with argocd(gitops).md
+++ b/6.production grade hosting with argocd(gitops).md
@@ -602,7 +602,15 @@ mongodb://admin:S3cureP@ssw0rd123!@mongo-service:27017
   APP HEALTH : Healthy
   ```
 
----
 
+- **Application Code Repo:** [EKS-GO-TODO](https://github.com/SAYEM-16T/EKS-GO-TODO.git)  
+Contains backend, frontend, and base manifests.
+
+- **Manifest Repo (GitOps):** [EKS-GITOPS](https://github.com/SAYEM-16T/EKS-GITOPS.git)  
+Used for ArgoCD to manage deployments and sync with the Kubernetes cluster.
+
+
+<br>
+<br>
 
 ![alt text](image.png)
