--- a/6.production grade hosting with argocd(gitops).md
+++ b/6.production grade hosting with argocd(gitops).md
@@ -614,3 +614,17 @@ Used for ArgoCD to manage deployments and sync with the Kubernetes cluster.
 <br>
 
 ![alt text](image.png)
+
+
+
+
+# aplication architecture: 
+
+![alt text](<Untitled Diagram.drawio.png>)
+
+
+<br>
+<br>
+
+# EKS architecture: 
+
